--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -12,7 +12,7 @@ jobs:
   greet:
     runs-on: ubuntu-latest
 
-    steps
+    steps:
      - name: step 1, Greet
        run: echo ${{secrets.KEY}}
 
