--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps
-     - name: step 1, Fine
+     - name: step 1, Greet
        run: echo ${{secrets.KEY}}
 
      - name: step 2
