--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - master
-      - development
+      - dev
   pull_request:
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-     - name: step 1, NewOnne
+     - name: step 1, New
        run: echo ${{secrets.KEY}}
 
      - name: step 2
