--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -32,3 +32,9 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
+
+      - name: Upload Artifact
+          uses: actions/upload-artifact@v2
+          with:
+            name: app.jar
+            path: target/*.jar
